--- a/wildlove/package.json
+++ b/wildlove/package.json
@@ -15,12 +15,14 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.8.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
