implementing umburger menu

--- a/wildlove/package.json
+++ b/wildlove/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.8.0",
+    "lucide-react": "^0.503.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
